// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MainEditorTransform ui component changeX should set current gameObject local position's x set x value to floatInput 1`] = `
<div
  className="transform-component"
>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      X : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-10.1213"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Y : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Z : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`MainEditorTransform ui component changeY should set current gameObject local position's y create snap shot, set ui y floatInput value 1`] = `
<div
  className="transform-component"
>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      X : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-10.1213"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Y : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="25.216"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Z : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`MainEditorTransform ui component changeY should set current gameObject local position's y set y value to floatInput 1`] = `
<div
  className="transform-component"
>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      X : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-11.11111"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Y : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="25.216"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Z : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
</div>
`;

exports[`MainEditorTransform ui component changeZ should set current gameObject local position's z create snap shot, set ui z floatInput value 1`] = `
<div
  className="transform-component"
>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      X : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-10.1213"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Y : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-11.11111"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Z : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="155.2164"
    />
  </div>
</div>
`;

exports[`MainEditorTransform ui component changeZ should set current gameObject local position's z set z value to floatInput 1`] = `
<div
  className="transform-component"
>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      X : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-11.11111"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Y : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="-12.546478"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Z : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="155.2164"
    />
  </div>
</div>
`;

exports[`MainEditorTransform ui component create mainEditor transform ui component 1`] = `
<div
  className="transform-component"
>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      X : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Y : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
  <div
    className="wonder-float-input"
  >
    <span
      className="component-label"
    >
      Z : 
    </span>
    <input
      className="input-component float-input"
      onChange={[Function]}
      type="text"
      value="0"
    />
  </div>
</div>
`;
